# Mira

./: .gitattributes  .gitignore  AGENT-PROMPT-B-cut-filters.md  AGENT-PROMPT-vocab-audit.md  BRIEF-dc-filter-and-gear-wizard.md  BRIEF-single-writer-lock.md  BUGS.md  CLAUDE.md  DEVELOPMENT-BACKLOG.md  HANDOFF-activity-line-and-exposure-chip.md  HANDOFF-bugfix-2026-06-22.md  HANDOFF-bugs-remaining.md  HANDOFF-display-resolution.md  HANDOFF-editor-image-rotate.md  HANDOFF-new-event-quicksweep-finish.md  HANDOFF-pick-donut-keeprate.md  HANDOFF-prev-next-buttons.md  HANDOFF-recipe-overwrite-and-cut-day-nav.md  HANDOVER-2026-06-14-evening.md  HANDOVER-2026-06-14.md  HANDOVER-2026-06-26-overlays.md  HANDOVER-2026-06-30-day-separator-videos.md  HANDOVER-2026-06-30-spec159-exported-collection.md  HANDOVER-2026-06-30-spec159-filters-and-preferred.md  HANDOVER-2026-07-01-spec160-audit-review.md  README.md  RESEARCH-faces-maps-collages.md  VISUAL-AUDIT-2026-06-16.md  build.bat  build_mira_with_nuitka.ps1  cria_mira_exe.bat  diag_focus_stack.py  installer.iss  launch.bat  out.txt  pyproject.toml  recover_db.py  verify.bat
PTE example/: mira_base_template.pte  photo and video example.pte  pte_template.pte  separators with photo and video - with border.pte  separators with photo and video.pte  slideshow.pte  trip_long.pte
agent-tasks/: HANDOVER-phase-1-complete.md  HANDOVER-phase-2-complete.md  HANDOVER-phase-2-final.md  HANDOVER-phase-2-implementation-complete.md  HANDOVER-phase-2-start.md  README.md  task-A-data-layer.md  task-A-implementation-plan.md  task-B-resolution-and-export.md  task-C-ui-surfaces.md  task-D-cross-event-phase2.md
assets/: bracket_detector.json  bucket_scanner.json  countries.json  country_boundaries.json  phone_makers.json  plan_template.txt  refinement_rules.json  refinement_rules_phone.json
core/: aspect_ratio.py  atomic_journal.py  audio_library.py  autofill.py  body_profile.py  bracket_detector.py  bracket_help.py  brand_profile.py  bucket_navigator_model.py  bucket_scanner.py  capture_bake.py  capture_plan_check.py  classifier_v2.py  clock_calibration.py  clock_recognition.py  (+113 more)
(+882 files in other folders)
